# slippy-diff

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  TODOS.md  build.rs  release-please-config.json
.cargo/: config.toml
.github/workflows/: release-please.yml
assets/icons/: README.md
docs/superpowers/plans/: 2026-06-18-diff-display.md  2026-06-27-idea-like-unified-diff-view.md  2026-06-28-custom-diff-canvas-and-pin.md  2026-06-28-prev-next-navigation.md  2026-06-29-character-level-diff-copy.md  2026-06-30-release-packaging-and-desktop-integration.md
docs/superpowers/specs/: 2026-06-18-diff-display-design.md  2026-06-27-idea-like-unified-diff-view-design.md  2026-06-28-custom-diff-canvas-and-pin-design.md  2026-06-28-prev-next-navigation-design.md  2026-06-29-character-level-diff-copy-design.md  2026-06-29-slippy-logo-design.md  2026-06-30-release-packaging-and-desktop-integration-design.md
examples/: fltk_resize_probe.rs
packaging/linux/: README.md  dev.wwwhynot3.slippy.desktop  install-linux.sh  install-release.sh  uninstall-linux.sh
src/: app_state.rs  config.rs  diff_core.rs  diff_view.rs  lib.rs  main.rs  ui_fltk.rs
tests/: linux_install_scripts.rs  release_workflow.rs
