[package]
name = "slippy"
version = "0.3.0"
edition = "2024"

[dependencies]
fltk = { version = "1", features = ["fltk-bundled"] }
similar = "2"
arboard = "3"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winresource = "0.1"

[features]
default = []
wayland = ["fltk/use-wayland"]
